--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Vladimir Pechev",
   "license": "ISC",
   "dependencies": {
-    "graphql-yoga": "^1.18.3"
+    "graphql-yoga": "^1.18.3",
+    "prisma-client-lib": "^1.34.10"
   }
 }
